Only build gem pre-release when self-tests are passing.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,7 @@ jobs:
   # Job: Automatic Minor Releases
   auto-release:
     name: "Automatic Minor Releases"
+    needs: [unit-tests]
     runs-on: ubuntu-latest
     strategy:
       matrix:
