Fixes to :path config handling
- Now allows full use of Ruby globs as originally intended (remains limited to directory results)
- Now performs logical path comparisons instead of path string comparisons (ex. ‘foo/bar’ is logically equivalent to ‘./foo/bar’ and must evaluate that way)
- Reforms :paths entries to yield the cleanest relative paths possible
- Removed superfluous `File.directory?()` checks on path collections
- Removed filepath handling in source, test, etc. file collection building as source path collections have no file paths in them (:files is the place for filepath handling)
- Replaced regex-based tests with much simpler string matching methods
- Cleaned up some naming

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -33,7 +33,10 @@ file_path_utils:
     - file_wrapper
 
 file_system_utils:
-  compose: file_wrapper
+  compose:
+    - file_wrapper
+    - stream_wrapper
+    - reportinator
 
 project_file_loader:
   compose:
