--- a/assets/project_with_guts.yml
+++ b/assets/project_with_guts.yml
@@ -7,7 +7,7 @@
   # optional features. If you don't need them, keep them turned off for performance
   :use_mocks: TRUE
   :use_test_preprocessor: TRUE
-  :use_backtrace_gdb_reporter: FALSE
+  :use_backtrace: FALSE
 
   # tweak the way ceedling handles automatic tasks
   :build_root: build
