Fixed missing Unity, CMock, CException
Previous commit forced FileList pattern evaluation to come before frameworks were copied into local build/vendor directory. These source files were thus missing from compilation input collections.

This commit moves build directory creation and vendored frameworks copying into project configuration building  from Rake tasks.

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -106,6 +106,7 @@ configurator_setup:
     - configurator_validator
     - configurator_plugins
     - streaminator
+    - file_wrapper
 
 configurator_plugins:
   compose:
