--- a/assets/project_with_guts.yml
+++ b/assets/project_with_guts.yml
@@ -219,7 +219,10 @@
 #   :includes:
 #     :tst: []
 #     :src: []:module_generator:
-#   :boilerplates: ""
+#   :boilerplates: 
+#     :src: ""
+#     :inc: ""
+#     :tst: ""
 
 # :dependencies:
 #   :libraries:
