--- a/plugins/module_generator/example/project.yml
+++ b/plugins/module_generator/example/project.yml
@@ -172,4 +172,7 @@
 :module_generator:
   :project_root: ./
   :naming: :snake #options: :bumpy, :camel, :caps, or :snake
-  :boilerplates: ""
+  :boilerplates: 
+    :src: ""
+    :inc: ""
+    :tst: ""
