--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -215,7 +215,10 @@
 #   :includes:
 #     :tst: []
 #     :src: []:module_generator:
-#   :boilerplates: ""
+#   :boilerplates:
+#     :src: ""
+#     :inc: ""
+#     :tst: ""
 
 # :dependencies:
 #   :libraries:
