Fixed a number of issues with module generator plugin related to pattern matching. Updated docs for path matching.

--- a/plugins/module_generator/config/module_generator.yml
+++ b/plugins/module_generator/config/module_generator.yml
@@ -1,4 +1,7 @@
 :module_generator:
   :project_root: ./
-  :source_root: src/
-  :test_root: test/
+  :naming: :snake #options: :bumpy, :camel, :caps, or :snake
+  :boilerplates: 
+    :src: ""
+    :inc: ""
+    :tst: ""
