further advancing dependency self-test with in-place dependency

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ examples/temp_sensor/build/
 plugins/fff/examples/fff_example/build/
 plugins/module_generator/example/build/
 plugins/dependencies/example/boss/build/
+plugins/dependencies/example/boss/third_party/
 plugins/dependencies/example/supervisor/build/
 
 ceedling.sublime-project
