--- a/plugins/dependencies/example/boss/project.yml
+++ b/plugins/dependencies/example/boss/project.yml
@@ -58,7 +58,7 @@
           - libsupervisor.a
         :dynamic_libraries: []
         :includes: 
-          - ../../src
+          - ../../src/supervisor.h
     - :name: WorkerBees
       :source_path:   third_party/bees/source
       :build_path:    third_party/bees/source
@@ -74,7 +74,7 @@
           - libworker.a
         :dynamic_libraries: []
         :includes:
-          - ''
+          - libworker.h
 
 # Plugins are optional Ceedling features which can be enabled. Ceedling supports
 # a variety of plugins which may effect the way things are compiled, reported, 
