Start process of taking the last of the subprojects features into dependencies plugin.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,13 @@ jobs:
           rake
           cd ../..
 
+      # Run Dependencies Plugin Tests
+      - name: Run Tests On Dependency Plugin
+        run: |
+          cd plugins/dependencies
+          rake
+          cd ../..
+
   # Job: Automatic Minor Releases
   auto-release:
     name: "Automatic Minor Releases"
