--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -211,7 +211,7 @@
 #   :naming: :snake #options: :bumpy, :camel, :caps, or :snake
 #   :includes:
 #     :tst: []
-#     :src: []:module_generator:
+#     :src: []
 #   :boilerplates:
 #     :src: ""
 #     :inc: ""
